force-app/main/user-communications/objects/Conversation__c/Conversation__c.object-meta.xml
<CustomObject>
    <label>Conversation</label>
    <nameField>
        <displayFormat>CNV-{0000000}</displayFormat>
        <label>Conversation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conversations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>