force-app/main/user-communications/objects/Conversation__c/fields/Elapsed_Days_First_Unread__c.field-meta.xml
<CustomField>
    <fullName>Elapsed_Days_First_Unread__c</fullName>
    <formula>FLOOR( NOW() - FirstUnreadDate__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Elapsed Days First Unread</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>