force-app/main/user-communications/objects/Conversation__c/fields/FirstUnreadDate__c.field-meta.xml
<CustomField>
    <fullName>FirstUnreadDate__c</fullName>
    <label>FirstUnreadDate</label>
    <type>DateTime</type>
</CustomField>