force-app/main/user-communications/objects/Conversation__c/fields/haveUnreadForParticipant__c.field-meta.xml
<CustomField>
    <fullName>haveUnreadForParticipant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The conversation has messages from the PI to the patient that have not been read</description>
    <label>haveUnreadForParticipant</label>
    <type>Checkbox</type>
</CustomField>