force-app/main/user-communications/objects/Conversation__c/fields/haveUnreadForPI__c.field-meta.xml
<CustomField>
    <fullName>haveUnreadForPI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The conversation has messages from the patient to the PI that have not been read</description>
    <label>haveUnreadForPI</label>
    <type>Checkbox</type>
</CustomField>