force-app/main/user-communications/objects/Conversation__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Conversations</relationshipLabel>
    <relationshipName>Conversations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>